上传我的博客

--- a/_posts/圣经/2015-03-15-最理想的生活状态.md
+++ b/_posts/圣经/2015-03-15-最理想的生活状态.md
@@ -1,4 +1,12 @@
-## 最理想的生活状态##
+---
+layout: post
+title: 最理想的生活状态
+category: 读书
+tags: 天津和北京 复旦
+keywords: 
+description: 
+---
+
 
 **知道自己的生命是为何而来**
 
