--- a/_posts/计算机/2015-04-09-MySQL 常用操作.md
+++ b/_posts/计算机/2015-04-09-MySQL 常用操作.md
@@ -1,5 +1,13 @@
+---
+layout: post
+title: MySQL 常用操作
+category: 读书
+tags: 天津和北京 复旦
+keywords: 
+description: 
+---
 
-### MySQL 常用操作
+
 + **向表中插入数据**
 insert [into] 表名[(列名1，列名2....)] values (值1，值2...);
 <pre><code>
