博客：机器学习资源

--- a/_posts/计算机/2015-11-17-机器学习资源速查索引.md
+++ b/_posts/计算机/2015-11-17-机器学习资源速查索引.md
@@ -19,3 +19,7 @@ description:
 
     [一颗中二的哨牙](http://bucktoothsir.github.io/)
 
+    [袁勇的博客](yongyuan.name)
+
+    [小村长的博客](blog.csdn.net/lu597203933) 
+
