--- a/_posts/计算机/2015-11-17-机器学习资源速查索引.md
+++ b/_posts/计算机/2015-11-17-机器学习资源速查索引.md
@@ -21,5 +21,5 @@ description:
 
     [袁勇的博客](yongyuan.name)
 
-    [小村长的博客](blog.csdn.net/lu597203933) 
+    [小村长的博客](blog.csdn.net/lu597203933)  CNN以及深度学习方向
 
