--- a/_posts/计算机/2015-11-17-机器学习资源速查索引.md
+++ b/_posts/计算机/2015-11-17-机器学习资源速查索引.md
@@ -8,6 +8,7 @@ description:
 ---
 
 1. ##感知器##
+2. 
    [感知器（神经网络视角）](http://shaoxiongjiang.com/2013/03/%E6%9C%BA%E5%99%A8%E5%AD%A6%E4%B9%A0%E5%85%A5%E9%97%A8-%E6%84%9F%E7%9F%A5%E5%99%A8-perceptron/)
 
     [码农场带动画演示](http://www.hankcs.com/ml/the-perceptron.html)
@@ -15,11 +16,16 @@ description:
    [反向神经网络极简入门.码农场](http://www.hankcs.com/ml/back-propagation-neural-network.html)
 
 
-2. ##计算机视觉##
+2.   ##计算机视觉##
+3.   
 
     [一颗中二的哨牙](http://bucktoothsir.github.io/)
 
     [袁勇的博客](yongyuan.name)
 
     [小村长的博客](blog.csdn.net/lu597203933)  CNN以及深度学习方向
+    
+3.    ##待读列表##
+
+    [(Python)人人都能写LSTM-RNN(实例教程)](http://iamtrask.github.io/2015/11/15/anyone-can-code-lstm/)
 
