--- a/_posts/计算机/2015-11-17-机器学习资源速查索引.md
+++ b/_posts/计算机/2015-11-17-机器学习资源速查索引.md
@@ -22,6 +22,8 @@ description:
 * ##待读列表##
 
     [(Python)人人都能写LSTM-RNN(实例教程)](http://iamtrask.github.io/2015/11/15/anyone-can-code-lstm/)
+
+    [斯坦福深度学习WIKI](http://deeplearning.stanford.edu/wiki/index.php/UFLDL%E6%95%99%E7%A8%8B)
     
 
 * <h2>感知机</h2>
