--- a/_posts/计算机/2015-11-17-机器学习资源速查索引.md
+++ b/_posts/计算机/2015-11-17-机器学习资源速查索引.md
@@ -11,7 +11,7 @@ description:
 
 
 
-* ##计算机视觉##
+1.  ##计算机视觉##
   
     [一颗中二的哨牙](http://bucktoothsir.github.io/)
 
@@ -19,14 +19,14 @@ description:
 
     [小村长的博客](blog.csdn.net/lu597203933)  CNN以及深度学习方向
     
-* ##待读列表##
+1.  ##待读列表##
 
     [(Python)人人都能写LSTM-RNN(实例教程)](http://iamtrask.github.io/2015/11/15/anyone-can-code-lstm/)
 
     [斯坦福深度学习WIKI](http://deeplearning.stanford.edu/wiki/index.php/UFLDL%E6%95%99%E7%A8%8B)
     
 
-* <h2>感知机</h2>
+1.  <h2>感知机</h2>
 
     [感知器（神经网络视角）](http://shaoxiongjiang.com/2013/03/%E6%9C%BA%E5%99%A8%E5%AD%A6%E4%B9%A0%E5%85%A5%E9%97%A8-%E6%84%9F%E7%9F%A5%E5%99%A8-perceptron/)
 
