路加福音第4章

--- a/_posts/圣经/2015-11-23-路加福音第4章.md
+++ b/_posts/圣经/2015-11-23-路加福音第4章.md
@@ -1,15 +1,14 @@
 ---
 layout: post
+title: 路加福音第4章查经笔记
 category: 圣经
+tags: 路加福音  查经
 keywords: 
 description: 
-title: 路加福音查经笔记第7课 
-tags: 路加福音,查经笔记
-grammar_cjkRuby: true
 ---
 
 
-->  <h1>耶稣起初的事工</h1> <-
+ <h1>耶稣起初的事工</h1> 
 ## 服事的准备 受试探
 1. 受圣灵的引导（确定事奉的心态），事奉前必要的准备
 2. 魔鬼的试探都是用圣经的话
