路加福音第5课

--- a/_posts/圣经/2015-11-23-路加福音第4章.md
+++ b/_posts/圣经/2015-11-23-路加福音第4章.md
@@ -9,16 +9,19 @@ description:
 
 
  <h1>耶稣起初的事工</h1> 
-## 服事的准备 受试探<br>
-1. 受圣灵的引导（确定事奉的心态），事奉前必要的准备
-2. 魔鬼的试探都是用圣经的话
-3. 试探的内容
+## 服事的准备 受试探   
 
-   A. 人的基本需要-食物
+1. 受圣灵的引导（确定事奉的心态），事奉前必要的准备  
+
+2. 魔鬼的试探都是用圣经的话  
+ 
+3. 试探的内容   
+
+     A. 人的基本需要-食物
    
-   B. 与神的关系- 眼见VS信心
+     B. 与神的关系- 眼见VS信心
    
-   C. 试探神- 人的方法VS神的道路
+     C. 试探神- 人的方法VS神的道路
 
 **为什么耶稣要受试探？**
 
