--- a/_posts/圣经/2015-11-23-路加福音第5章.md
+++ b/_posts/圣经/2015-11-23-路加福音第5章.md
@@ -27,7 +27,7 @@ description:
     
     G. 四人的回应：撇下一切跟随耶稣（列王纪19：19~21，路18：18~23）       
     
-    **  彼得为什么会这样子？  **   
+    **讨论：彼得为什么会这样子？** 
     
     
 2.  医治大麻风病人(5:12——16)     
