机器学习基石

--- a/_posts/计算机/2015-11-25-台大机器学习基石.md
+++ b/_posts/计算机/2015-11-25-台大机器学习基石.md
@@ -1,9 +1,11 @@
 ---
-title: 台大机器学习笔记
-tags: 机器学习,台大
-grammar_cjkRuby: true
+layout: post
+title: 台大机器学习基石笔记
+category: 计算机
+tags: 数学  机器学习
+keywords: 
+description: 
 ---
-
 
 ## 1. 机器学习是不可能的
 我们先来看一个简单的二分问题：
@@ -50,4 +52,5 @@ grammar_cjkRuby: true
 
 [^1]:假设空间在N个样本点上能产生的最大二分（dichotomy）数量，其中二分是样本点在二元分类情况下的排列组合
 [^2]: 第一个露出一线希望的点，在这个点后都会是break points。通俗解释：不能满足完全分类情形的样本点个数，完全二分类情形（shattered）是可分出  种二分类（dichotomy）的情形。
+
 [^3]: maximum possible growth function，when break point=k
