--- a/_posts/计算机/2015-11-25-台大机器学习基石.md
+++ b/_posts/计算机/2015-11-25-台大机器学习基石.md
@@ -10,7 +10,9 @@ description:
 ## 1. 机器学习是不可能的<br>
 我们先来看一个简单的二分问题:<img src="http://www.forkosh.com/mathtex.cgi? \small if\hspace{0.2cm} \chi= \{0,1\}^3,y=\{0,\times \}"> can enumerate all candidate f as H?  
 
-看似这个问题不难！输入一共可以有<img src="http://www.forkosh.com/mathtex.cgi? \small 2^3=8">种，那么hypothesis set大小就为<img src="http://www.forkosh.com/mathtex.cgi? \small 2^8=256">了。现在给出训练样本集（in-sample），
+看似这个问题不难！输入一共可以有<img src="http://www.forkosh.com/mathtex.cgi? \small 2^3=8">种，那么hypothesis set大小就为<img src="http://www.forkosh.com/mathtex.cgi? \small 2^8=256">了。现在给出训练样本集（in-sample），    
+
+
 | <img src="http://www.forkosh.com/mathtex.cgi? \Large x_n">|  <img src="http://www.forkosh.com/mathtex.cgi? \Large y_n=f(x_n)"> |
 | -----|:----:|  
 |0 0 0|0|
@@ -35,7 +37,7 @@ description:
 |1 1 0| |?|0|0|X|X|0|0|x|x
 |1 1 1| |?|0|x|0|X|0|X|0|x    
 
-我们可以在5个已经给出的输入上面得到g的预测是否正确，
+我们可以在5个已经给出的输入上面得到g的预测是否正确，但是在未看过的三个输入上呢？我们会发现其实还有三种可能
 ## 2.机器学习怎么样是可能的（限制条件）
 <img src="http://www.forkosh.com/mathtex.cgi? \Large x=\frac{-b\pm\sqrt{b^2-4ac}}{2a}">
 
