--- a/_posts/计算机/2015-11-25-台大机器学习基石.md
+++ b/_posts/计算机/2015-11-25-台大机器学习基石.md
@@ -23,7 +23,7 @@ description:
 
 我们选择一个机器学习算法从Hypothesis set中选出一个g,( <img src="http://www.forkosh.com/mathtex.cgi? \small pick\hspace{0.1cm}g\epsilon H,with \hspace{0.1cm}all\hspace{0.1cm} g(x_n)=y_n(like\hspace{0.1cm} PLA\hspace{0.2cm}algorithm).\hspace{0.2cm} \underline{Does\hspace{0.2cm} g\approx f?}">  )    
 
-我们当然可以像感知机（PLA）那样，能够找出一个或者若干个好的g,在训练样本集（in-sample）上把所有的样本分对。那么可能有多少个g呢？
+我们当然可以像感知机（PLA）那样，能够找出一个或者若干个好的g,在训练样本集（in-sample）上把所有的样本分对。上例中，
 <center>No Free Lunch</center>
 
 |x|y|g|f1|f2|f3|f4|f5|f6|f7|f8|
@@ -43,16 +43,17 @@ description:
 
 
 
-### Growth Function ###     
+### Growth Function    
 释义[^1] 
 | 假设函数形式 | growth function | break points|
 | -----|:----:|  ----:|
 | positive rays   |N+1    | 2
 | positive intervals|(1/2)N^2+(1/2)N+1 |  3
 | 2D perceptrons| <2^N |4
-| convex sets| 2^N |  no break|
-### break points[^2] ###  
-### bounding function B(N,K)[^3] ###
+| convex sets| 2^N |  no break|   
+
+### break points[^2] 
+### bounding function B(N,K)[^3]
 
 [^1]:假设空间在N个样本点上能产生的最大二分（dichotomy）数量，其中二分是样本点在二元分类情况下的排列组合
 [^2]: 第一个露出一线希望的点，在这个点后都会是break points。通俗解释：不能满足完全分类情形的样本点个数，完全二分类情形（shattered）是可分出  种二分类（dichotomy）的情形。
