--- a/_posts/计算机/2015-11-25-台大机器学习基石.md
+++ b/_posts/计算机/2015-11-25-台大机器学习基石.md
@@ -12,32 +12,21 @@ description:
 
 看似这个问题不难！输入一共可以有<img src="http://www.forkosh.com/mathtex.cgi? \small 2^3=8">种，那么hypothesis set大小就为<img src="http://www.forkosh.com/mathtex.cgi? \small 2^8=256">了。现在给出训练样本集（in-sample），    
 
-
-| <img src="http://www.forkosh.com/mathtex.cgi? \Large x_n">|  <img src="http://www.forkosh.com/mathtex.cgi? \Large y_n=f(x_n)"> |
-| -----|:----:|  
-|0 0 0|0|
-|0 0 1|X|
-|0 1 0|X|
-|0 1 1|0|
-|1 0 0|X|    
+<img src="http://xiangce.baidu.com/picture/detail/c0692111be2f8bcf2ef0d0d41f9527f2bd78b257">
 
 我们选择一个机器学习算法从Hypothesis set中选出一个g,( <img src="http://www.forkosh.com/mathtex.cgi? \small pick\hspace{0.1cm}g\epsilon H,with \hspace{0.1cm}all\hspace{0.1cm} g(x_n)=y_n(like\hspace{0.1cm} PLA\hspace{0.2cm}algorithm).\hspace{0.2cm} \underline{Does\hspace{0.2cm} g\approx f?}">  )    
 
 我们当然可以像感知机（PLA）那样，能够找出一个或者若干个好的g,在训练样本集（in-sample）上把所有的样本分对。上例中，
-<center>No Free Lunch</center>
+<center>No Free Lunch</center>     
 
-|x|y|g|f1|f2|f3|f4|f5|f6|f7|f8|
-| -----|:----:|  ----:|  ----:|  ----:|  ----:|  ----:|  ----:|  ----:|  ----:|  ----:|
-|0 0 0|0|0|0|0|0|0|0|0|0|0| 
-|0 0 1|X|X|X|X|X|X|X|X|X|X| 
-|0 1 0|X|X|X|X|X|X|X|X|X|X| 
-|0 1 1|0|0|0|0|0|0|0|0|0|0| 
-|1 0 0|0|0|0|0|0|0|0|0|0|0| 
-|1 0 1| |?|0|0|0|0|X|X|X|X|
-|1 1 0| |?|0|0|X|X|0|0|x|x
-|1 1 1| |?|0|x|0|X|0|X|0|x    
+<img src="http://xiangce.baidu.com/picture/detail/4a4720ed9c9a7d2b69a64b22d62f0a83d3becc3c" >    
 
-我们可以在5个已经给出的输入上面得到g的预测是否正确，但是在未看过的三个输入上呢？我们会发现其实还有三种可能
+我们可以在5个已经给出的输入上面得到g的预测是否正确，但是在未看过的三个输入上呢？我们会发现其实还有8种可能的选择。所以      
+
+* g<img src="http://www.forkosh.com/mathtex.cgi? \small \approx"> f  inside D:sure!
+* g<img src="http://www.forkosh.com/mathtex.cgi? \small \approx"> f  inside D:NO!but that's really what we want!   
+ 
+
 ## 2.机器学习怎么样是可能的（限制条件）
 <img src="http://www.forkosh.com/mathtex.cgi? \Large x=\frac{-b\pm\sqrt{b^2-4ac}}{2a}">
 
