--- a/_posts/计算机/2015-11-25-台大机器学习基石.md
+++ b/_posts/计算机/2015-11-25-台大机器学习基石.md
@@ -19,14 +19,14 @@ description:
 我们当然可以像感知机（PLA）那样，能够找出一个或者若干个好的g,在训练样本集（in-sample）上把所有的样本分对。上例中，
 <center>No Free Lunch</center>     
 
-<img src="http://xiangce.baidu.com/picture/detail/4a4720ed9c9a7d2b69a64b22d62f0a83d3becc3c" >    
+![1](/public/img/4_2.jpg)   
 
 我们可以在5个已经给出的输入上面得到g的预测是否正确，但是在未看过的三个输入上呢？我们会发现其实还有8种可能的选择。所以      
 
 * g<img src="http://www.forkosh.com/mathtex.cgi? \small \approx"> f  inside D:sure!
 * g<img src="http://www.forkosh.com/mathtex.cgi? \small \approx"> f  inside D:NO!but that's really what we want!   
  
-
+我们没有办法说在给出的样本以外，说g做出的预测如何！
 ## 2.机器学习怎么样是可能的（限制条件）
 <img src="http://www.forkosh.com/mathtex.cgi? \Large x=\frac{-b\pm\sqrt{b^2-4ac}}{2a}">
 
