4-1 机器学习是不可能的

--- a/_posts/计算机/2015-11-25-台大机器学习基石.md
+++ b/_posts/计算机/2015-11-25-台大机器学习基石.md
@@ -12,7 +12,7 @@ description:
 
 看似这个问题不难！输入一共可以有<img src="http://www.forkosh.com/mathtex.cgi? \small 2^3=8">种，那么hypothesis set大小就为<img src="http://www.forkosh.com/mathtex.cgi? \small 2^8=256">了。现在给出训练样本集（in-sample），    
 
-<img src="http://xiangce.baidu.com/picture/detail/c0692111be2f8bcf2ef0d0d41f9527f2bd78b257">
+![2](/public/img/4_1.jpg)
 
 我们选择一个机器学习算法从Hypothesis set中选出一个g,( <img src="http://www.forkosh.com/mathtex.cgi? \small pick\hspace{0.1cm}g\epsilon H,with \hspace{0.1cm}all\hspace{0.1cm} g(x_n)=y_n(like\hspace{0.1cm} PLA\hspace{0.2cm}algorithm).\hspace{0.2cm} \underline{Does\hspace{0.2cm} g\approx f?}">  )    
 
@@ -27,6 +27,8 @@ description:
 * g<img src="http://www.forkosh.com/mathtex.cgi? \small \approx"> f  inside D:NO!but that's really what we want!   
  
 我们没有办法说在给出的样本以外，说g做出的预测如何！
+下面的练习题很简单，如果你做错了，说明这节课的还没有很好掌握！
+![3](/public/img/4_1_funTime.jpg)
 ## 2.机器学习怎么样是可能的（限制条件）
 <img src="http://www.forkosh.com/mathtex.cgi? \Large x=\frac{-b\pm\sqrt{b^2-4ac}}{2a}">
 
