--- a/_posts/计算机/2015-11-25-台大机器学习基石.md
+++ b/_posts/计算机/2015-11-25-台大机器学习基石.md
@@ -8,11 +8,16 @@ description:
 ---
 
 ## 1. 机器学习是不可能的<br>
-我们先来看一个简单的二分问题:<img src="http://www.forkosh.com/mathtex.cgi? \small if\hspace{0.2cm} \chi= \{0,1\}^3,y=\{0,\times \}"> can enumerate all candidate f as H?  
+我们先来看一个简单的二分问题:
+if :<a href="https://www.codecogs.com/eqnedit.php?latex=\hspace{0.2cm}&space;\chi=&space;\{0,1\}^3,y=\{0,\times&space;\}" target="_blank"><img src="https://latex.codecogs.com/gif.latex?\hspace{0.2cm}&space;\chi=&space;\{0,1\}^3,y=\{0,\times&space;\}" title="\hspace{0.2cm} \chi= \{0,1\}^3,y=\{0,\times \}" /></a>  
+
+can enumerate all candidate f as H?  
 
 看似这个问题不难！输入一共可以有<img src="http://www.forkosh.com/mathtex.cgi? \small 2^3=8">种，那么hypothesis set大小就为<img src="http://www.forkosh.com/mathtex.cgi? \small 2^8=256">了。现在给出训练样本集（in-sample），    
 
-![2](/public/img/4_1.jpg)
+![2](/public/img/4_1.jpg)   
+
+
 
 我们选择一个机器学习算法从Hypothesis set中选出一个g,( <img src="http://www.forkosh.com/mathtex.cgi? \small pick\hspace{0.1cm}g\epsilon H,with \hspace{0.1cm}all\hspace{0.1cm} g(x_n)=y_n(like\hspace{0.1cm} PLA\hspace{0.2cm}algorithm).\hspace{0.2cm} \underline{Does\hspace{0.2cm} g\approx f?}">  )    
 
