--- a/_posts/计算机/2015-11-25-台大机器学习基石.md
+++ b/_posts/计算机/2015-11-25-台大机器学习基石.md
@@ -13,7 +13,7 @@ if :<a href="https://www.codecogs.com/eqnedit.php?latex=\hspace{0.2cm}&space;\ch
 
 can enumerate all candidate f as H?  
 
-看似这个问题不难！输入一共可以有<img src="http://www.forkosh.com/mathtex.cgi? \small 2^3=8">种，那么hypothesis set大小就为<img src="http://www.forkosh.com/mathtex.cgi? \small 2^8=256">了。现在给出训练样本集（in-sample），    
+看似这个问题不难！输入一共可以有<a href="https://www.codecogs.com/eqnedit.php?latex=\hspace{0.2cm}&space;\chi=&space;\{0,1\}^3,y=\{0,\times&space;\}" target="_blank"><img src="https://latex.codecogs.com/gif.latex?\hspace{0.2cm}&space;\chi=&space;\{0,1\}^3,y=\{0,\times&space;\}" title="\hspace{0.2cm} \chi= \{0,1\}^3,y=\{0,\times \}" /></a>种，那么hypothesis set大小就为<a href="https://www.codecogs.com/eqnedit.php?latex=\hspace{0.2cm}&space;\chi=&space;\{0,1\}^3,y=\{0,\times&space;\}" target="_blank"><img src="https://latex.codecogs.com/gif.latex?\hspace{0.2cm}&space;\chi=&space;\{0,1\}^3,y=\{0,\times&space;\}" title="\hspace{0.2cm} \chi= \{0,1\}^3,y=\{0,\times \}" /></a>了。现在给出训练样本集（in-sample），    
 
 ![2](/public/img/4_1.jpg)   
 
