--- a/_posts/计算机/2015-11-25-台大机器学习基石.md
+++ b/_posts/计算机/2015-11-25-台大机器学习基石.md
@@ -19,14 +19,15 @@ can enumerate all candidate f as H?
 
 
 
-我们选择一个机器学习算法从Hypothesis set中选出一个g,( <img src="http://www.forkosh.com/mathtex.cgi? \small pick\hspace{0.1cm}g\epsilon H,with \hspace{0.1cm}all\hspace{0.1cm} g(x_n)=y_n(like\hspace{0.1cm} PLA\hspace{0.2cm}algorithm).\hspace{0.2cm} \underline{Does\hspace{0.2cm} g\approx f?}">  )    
+<p>我们选择一个机器学习算法从Hypothesis set中选出一个g,( <img src="http://www.forkosh.com/mathtex.cgi? \small pick\hspace{0.1cm}g\epsilon H,with \hspace{0.1cm}all\hspace{0.1cm} g(x_n)=y_n(like\hspace{0.1cm} PLA\hspace{0.2cm}algorithm).\hspace{0.2cm} \underline{Does\hspace{0.2cm} g\approx f?}">  )       
+
 
 我们当然可以像感知机（PLA）那样，能够找出一个或者若干个好的g,在训练样本集（in-sample）上把所有的样本分对。上例中，
 <center>No Free Lunch</center>     
 
 ![1](/public/img/4_2.jpg)   
 
-我们可以在5个已经给出的输入上面得到g的预测是否正确，但是在未看过的三个输入上呢？我们会发现其实还有8种可能的选择。所以      
+我们可以在5个已经给出的输入上面得到g的预测是否正确，但是在未看过的三个输入上呢？我们会发现其实还有8种可能的选择。所以        
 
 * g<img src="http://www.forkosh.com/mathtex.cgi? \small \approx"> f  inside D:sure!
 * g<img src="http://www.forkosh.com/mathtex.cgi? \small \approx"> f  inside D:NO!but that's really what we want!   
