--- a/_posts/计算机/2015-11-25-台大机器学习基石.md
+++ b/_posts/计算机/2015-11-25-台大机器学习基石.md
@@ -33,7 +33,8 @@ can enumerate all candidate f as H?
 * g<img src="http://www.forkosh.com/mathtex.cgi? \small \approx"> f  inside D:NO!but that's really what we want!   
  
 我们没有办法说在给出的样本以外，说g做出的预测如何！
-下面的练习题很简单，如果你做错了，说明这节课的还没有很好掌握！
+下面的练习题很简单，如果你做错了，说明这节课的还没有很好掌握奥...   
+
 ![3](/public/img/4_1_funTime.jpg)
 ## 2.机器学习怎么样是可能的（限制条件）
 <img src="http://www.forkosh.com/mathtex.cgi? \Large x=\frac{-b\pm\sqrt{b^2-4ac}}{2a}">
