--- a/_posts/计算机/2015-11-25-台大机器学习基石.md
+++ b/_posts/计算机/2015-11-25-台大机器学习基石.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 台大机器学习基石笔记
+title: 台大机器学习基石笔记4-1
 category: 计算机
 tags: 数学  机器学习
 keywords: 
@@ -9,6 +9,7 @@ description:
 
 ## 1. 机器学习是不可能的<br>
 我们先来看一个简单的二分问题:
+
 if :<a href="https://www.codecogs.com/eqnedit.php?latex=\hspace{0.2cm}&space;\chi=&space;\{0,1\}^3,y=\{0,\times&space;\}" target="_blank"><img src="https://latex.codecogs.com/gif.latex?\hspace{0.2cm}&space;\chi=&space;\{0,1\}^3,y=\{0,\times&space;\}" title="\hspace{0.2cm} \chi= \{0,1\}^3,y=\{0,\times \}" /></a>  
 
 can enumerate all candidate f as H?  
@@ -32,28 +33,8 @@ can enumerate all candidate f as H?
 * g<img src="http://www.forkosh.com/mathtex.cgi? \small \approx"> f  inside D:sure!
 * g<img src="http://www.forkosh.com/mathtex.cgi? \small \approx"> f  inside D:NO!but that's really what we want!   
  
-我们没有办法说在给出的样本以外，说g做出的预测如何！
+在训练样本集（in-sample）中，可以求得一个最佳的假设g，该假设最大可能的接近目标函数f，但是在训练样本集之外的其他样本（out-of-sample）中，假设g和目标函数f可能差别很远。
 下面的练习题很简单，如果你做错了，说明这节课的还没有很好掌握奥...   
 
 ![3](/public/img/4_1_funTime.jpg)
-## 2.机器学习怎么样是可能的（限制条件）
-<img src="http://www.forkosh.com/mathtex.cgi? \Large x=\frac{-b\pm\sqrt{b^2-4ac}}{2a}">
 
-
-
-### Growth Function    
-释义[^1] 
-| 假设函数形式 | growth function | break points|
-| -----|:----:|  ----:|
-| positive rays   |N+1    | 2
-| positive intervals|(1/2)N^2+(1/2)N+1 |  3
-| 2D perceptrons| <2^N |4
-| convex sets| 2^N |  no break|   
-
-### break points[^2] 
-### bounding function B(N,K)[^3]
-
-[^1]:假设空间在N个样本点上能产生的最大二分（dichotomy）数量，其中二分是样本点在二元分类情况下的排列组合
-[^2]: 第一个露出一线希望的点，在这个点后都会是break points。通俗解释：不能满足完全分类情形的样本点个数，完全二分类情形（shattered）是可分出  种二分类（dichotomy）的情形。
-
-[^3]: maximum possible growth function，when break point=k
