--- a/_posts/计算机/2015-11-25-台大机器学习基石4-2.md
+++ b/_posts/计算机/2015-11-25-台大机器学习基石4-2.md
@@ -13,7 +13,7 @@ description:
 
 现在有一个很大的盒子，里面充满了很多很多的橘色和绿色的弹珠。   
 
-![台大林轩田-机器学习基石头][1]
+![台大林轩田-机器学习基石头](/public/img/ML/4_2_1.jpg)
 
 
-  [1]: ./images/4_2_1.jpg "4_2_1.jpg"
+只要你学过概率与统计（即使没有学过，傻子也知道）就应该知道，我们完全可以试着来抽样嘛！ 
