--- a/_posts/计算机/2015-11-25-台大机器学习基石笔记4-2.md
+++ b/_posts/计算机/2015-11-25-台大机器学习基石笔记4-2.md
@@ -24,4 +24,7 @@ description:
 
 ![大样本情况下的近似关系](/public/img/ML/4_2_3.jpg)    
 
-也就是说，u和v相差大于<img src="https://latex.codecogs.com/gif.latex?\varepsilon" title="\varepsilon" />的概率为 <img src="https://latex.codecogs.com/gif.latex?\varepsilon" title="\varepsilon" />
+也就是说，u和v相差大于<img src="https://latex.codecogs.com/gif.latex?\varepsilon" title="\varepsilon" />的概率为<a href="https://www.codecogs.com/eqnedit.php?latex=2exp(-2*\varepsilon^2N&space;)" target="_blank"><img src="https://latex.codecogs.com/gif.latex?2exp(-2*\varepsilon^2N&space;)" title="2exp(-2*\varepsilon^2N )" /></a>    
+     
+     
+我们很容易得出结论：当抽样样本很大或者能够容忍的估计误差Error=|u-v|较大时，完全可以由Hoeffding不等式来进行估计！
