--- a/_posts/计算机/2015-11-25-台大机器学习基石笔记4-3.md
+++ b/_posts/计算机/2015-11-25-台大机器学习基石笔记4-3.md
@@ -8,7 +8,7 @@ description:
 ---
 
 
-## 将概率统计联系到机器学习上 ##  
+## 将概率统计联系到机器学习上 
 <p style="text-align: center;">表4-1 机器学习与统计中的对比</p>
 <div style="text-align: center;">
 <table style="border-collapse: collapse;" border="0"><colgroup><col style="width: 275px;"><col style="width: 279px;"></colgroup>
@@ -76,4 +76,6 @@ description:
 
 ![Hoeffding不等式在机器学习中的应用](/public/img/ML/4_3_2.jpg)
 
-<p>如果training examples够大（抽样样本很大），那么‘Ein(h)=Eout(h)’ 很大可能是相似的（is probably approximately correct...PAC）.
+<p>如果training examples够大（抽样样本很大），那么‘Ein(h)=Eout(h)’ 很大可能是相似的（is probably approximately correct...PAC）。      
+
+然而，不知道你有没有糊涂！我们这里一直是给定一个h(假设函数)，然后如果它的预测错误率E(error)很小，那么它估计在整体上的预测错误率很小，<strong>这仅仅可以成为一种验证方法。</strong>但是如果Hyposis set 本身就很大呢？我们可能很难选出一种h,来保证E(error)很小（无论在训练数据集还是整体上）。
