--- a/_posts/圣经/2015-11-23-路加福音第5章查经笔记.md
+++ b/_posts/圣经/2015-11-23-路加福音第5章查经笔记.md
@@ -27,7 +27,7 @@ description:
     
     G. 四人的回应：撇下一切跟随耶稣（列王纪19：19~21，路18：18~23）       
     
-    **  彼得为什么会这样子？  **   
+    <strong> 彼得为什么会这样子？ </strong>
     
     （当罪人遇见圣洁的神，第一反应是惧怕 参 以西结1：28 启1：17）  
     
@@ -41,7 +41,7 @@ description:
     C. 他只求怜悯（你若肯）。因他的信心，得了主的怜悯，蒙了医治   
     E. 主不要他告诉人，只要他按照律法宣告洁净     
     
-    **  讨论：为什么主要求他不要告诉人，只要给祭司查看？  **     
+    <strong>  讨论：为什么主要求他不要告诉人，只要给祭司查看？  </strong>     
     
     （参 利未记13:9  13:49  14:2 ）
 
@@ -54,7 +54,7 @@ description:
      
      C. 针对文士和法利赛人的挑战：主用医治的权能来显明他又赦罪的权柄           
      
-     ** 赦罪与治病，哪个更简单呢？赦罪的主权在谁呢？ **     
+     <strong> 赦罪与治病，哪个更简单呢？赦罪的主权在谁呢？ </strong>   
      
 4.  呼召利未（5：27——32）    
 
@@ -64,9 +64,9 @@ description:
     
     C. 不是我们寻找主，乃是主来寻找我们；主的呼召，使我们能离弃罪恶跟从祂
     
-    **  主为什么呼召利未？ **
+    <strong>  主为什么呼召利未？ </strong>
    
-5.     
+   
    
    
    
