--- a/_posts/圣经/2015-11-23-路加福音第5章查经笔记.md
+++ b/_posts/圣经/2015-11-23-路加福音第5章查经笔记.md
@@ -64,7 +64,23 @@ description:
     
     C. 不是我们寻找主，乃是主来寻找我们；主的呼召，使我们能离弃罪恶跟从祂
     
-    <strong>  主为什么呼召利未？ </strong>
+    <strong>  主为什么呼召利未？ </strong>    
+    
+    D.	利未立刻撇下一切，跟從了耶穌    
+    
+**討論：試想利未當時的心情如何？**     
+
+    E. 而且為耶穌大擺筳席     
+    
+**討論：這代表什麼？**    
+
+    F.  引起了文士及法利賽人的批抨    
+    
+    G.  耶穌做了最偉大的宣告      
+     
+           a.	主來是呼召拯救那些自知有罪，肯認罪悔改的人
+           b.	那些自己不覺得有罪，不肯認罪的人，不會接受主的救恩及呼召
+ 
    
    
    
