--- a/_posts/圣经/2015-11-23-路加福音第5章查经笔记.md
+++ b/_posts/圣经/2015-11-23-路加福音第5章查经笔记.md
@@ -66,20 +66,20 @@ description:
     
     <strong>  主为什么呼召利未？ </strong>    
     
-    D.	利未立刻撇下一切，跟從了耶穌    
+    D.	利未立刻撇下一切，跟从了耶穌    
     
-**討論：試想利未當時的心情如何？**     
+**讨论：试想利未当时的心情如何？**     
 
-    E. 而且為耶穌大擺筳席     
+    E. 而且为耶穌大摆筳席     
     
-**討論：這代表什麼？**    
+**讨论：這代表什麼？**    
 
-    F.  引起了文士及法利賽人的批抨    
+    F.  引起了文士及法利赛人的批抨    
     
-    G.  耶穌做了最偉大的宣告      
+    G.  耶穌做了最伟大的宣告      
      
-           a.	主來是呼召拯救那些自知有罪，肯認罪悔改的人
-           b.	那些自己不覺得有罪，不肯認罪的人，不會接受主的救恩及呼召
+           a.	主來是呼召拯救那些自知有罪，肯认罪悔改的人
+           b.	那些自己不觉得有罪，不肯认罪的人，不会接受主的救恩及呼召
  
    
    
