--- a/_posts/圣经/2015-11-23-路加福音第5章查经笔记.md
+++ b/_posts/圣经/2015-11-23-路加福音第5章查经笔记.md
@@ -68,11 +68,11 @@ description:
     
     D.	利未立刻撇下一切，跟从了耶穌    
     
-**讨论：试想利未当时的心情如何？**     
+<strong>讨论：试想利未当时的心情如何？</strong>    
 
     E. 而且为耶穌大摆筳席     
     
-**讨论：這代表什麼？**    
+<strong>讨论：這代表什麼？</strong>    
 
     F.  引起了文士及法利赛人的批抨    
     
