--- a/_posts/计算机/2015-11-17-机器学习资源速查索引.md
+++ b/_posts/计算机/2015-11-17-机器学习资源速查索引.md
@@ -25,7 +25,7 @@ description:
 
     [斯坦福深度学习WIKI](http://deeplearning.stanford.edu/wiki/index.php/UFLDL%E6%95%99%E7%A8%8B)     
     
-    [pythonye也可以](http://blog.csdn.net/column/details/python-can.html)
+    [python也可以](http://blog.csdn.net/column/details/python-can.html)
     
 
 3.  <h3>感知机</h3>
