--- a/_posts/计算机/2015-11-17-机器学习资源速查索引.md
+++ b/_posts/计算机/2015-11-17-机器学习资源速查索引.md
@@ -27,7 +27,9 @@ description:
     
     [python也可以](http://blog.csdn.net/column/details/python-can.html)     
     
-    [甘宇飞](https://yufeigan.github.io/)
+    [甘宇飞](https://yufeigan.github.io/)      
+    
+    [ufldl学习笔记](http://blog.csdn.net/linger2012liu/article/category/2146595)
     
 
 3.  <h3>感知机</h3>
