--- a/_posts/计算机/2015-11-17-机器学习资源速查索引.md
+++ b/_posts/计算机/2015-11-17-机器学习资源速查索引.md
@@ -40,5 +40,5 @@ description:
 
     [反向神经网络极简入门.码农场](http://www.hankcs.com/ml/back-propagation-neural-network.html)      
     
-    [论文+ 代码 类arXiv](http://gitxiv.com/)
+    [论文+ 代码 类arXiv http://gitxiv.com/](http://gitxiv.com/)
 
