--- a/_posts/圣经/2015-12-21-路加福音查经2.md
+++ b/_posts/圣经/2015-12-21-路加福音查经2.md
@@ -15,62 +15,83 @@ description:
 路加褔音这段记了四褔，比马太的八福少，但加了四祸是马太没有记的。
 
 <strong>八福 – 八种有福的心态</strong>
-1.	虚心 (贫穷) – 你们贫穷的人有福了．因为神的国是你们的。
-A.	心态：知道自己有需要
-B.	所得之褔：向神求就会承受救恩进天国
-2.	哀恸 (哀哭) – 你们哀哭的人有福了．因为你们将要喜笑。因为他们必得安慰。
-A.	心态：为自己的罪悲哀 
-B.	所得之褔：罪得赧免而喜乐
-3.	温柔 – 温柔的人有福了．因为他们必承受地土。
-A.	心态：不报复人的恶行 
-B.	所得之褔：得神报偿：产业
-4.	饥渴慕义 (饥饿) – 你们饥饿的人有福了．因为你们将要饱足。
-A.	心态：建立与神的关系 
-B.	所得之褔：享神丰满的同在 
-5.	怜恤 – 怜恤人的人有福了．因为他们必蒙怜恤。
-A.	心态：体念别人的需要 
-B.	所得之褔：神供应你的需要
+1.	虚心 (贫穷) – 你们贫穷的人有福了．因为神的国是你们的。    
+    A.	心态：知道自己有需要
+    B.	所得之褔：向神求就会承受救恩进天国   
+    
+2.	哀恸 (哀哭) – 你们哀哭的人有福了．因为你们将要喜笑。因为他们必得安慰。 
+    A.	心态：为自己的罪悲哀 
+    B.	所得之褔：罪得赧免而喜乐   
+
+3.	温柔 – 温柔的人有福了．因为他们必承受地土。    
+   A.	心态：不报复人的恶行 
+   B.	所得之褔：得神报偿~产业   
+
+4.	饥渴慕义 (饥饿) – 你们饥饿的人有福了．因为你们将要饱足。    
+   A.	心态：建立与神的关系 
+   B.	所得之褔：享神丰满的同在     
+
+5.	怜恤 – 怜恤人的人有福了．因为他们必蒙怜恤。   
+   A.	心态：体念别人的需要 
+   B.	所得之褔：神供应你的需要    
+
 6.	清心 – 清心的人有福了．因为他们必得见神。
-A.	心态：专心求上面的事 
-B.	所得之褔：得以更加认识神
+    A.	心态：专心求上面的事 
+    B.	所得之褔：得以更加认识神       
+
 7.	使人和睦 – 使人和睦的人有福了．因为他们必称为神的儿子。
-A.	心态：除去神与人，人与人之间的阻隔 
-B.	所得之褔：如主在世所行
+  A.	心态：除去神与人，人与人之间的阻隔 
+  B.	所得之褔：如主在世所行   
+
 8.	为义受苦 (为主被人恨恶) – 人为人子恨恶你们、拒绝你们、辱骂你们、弃掉你们的名、以为是恶、你们就有福了。当那日你们要欢喜跳跃．因为你们在天上的赏赐是大的．他们的祖宗待先知也是这样。
 A.	心态：甘愿为神付代价 
 B.	所得之褔：使救恩更能广传      
 
-  <strong>四祸 – 四种有祸的心态</strong>
+  <strong>四祸 – 四种有祸的心态</strong>     
+  
 1.	富足 – 但你们富足的人有祸了．因为你们受过你们的安慰。
    A.	心态：自以为没有需要 
-B.	所遭之祸：最不容易信福音
+B.	所遭之祸：最不容易信福音      
+
 2.	饱足 – 你们饱足的人有祸了．因为你们将要饥饿。
 A.	心态：只顾自己的享受 
-B.	所遭之祸：心灵中极端贫乏
+B.	所遭之祸：心灵中极端贫乏      
+
 3.	喜笑 – 你们喜笑的人有祸了．因为你们将要哀恸哭泣。
 A.	心态：不顾念别人需要 
-B.	所遭之祸：神也不顾念这人
+B.	所遭之祸：神也不顾念这人     
+
 4.	得人称赞 – 人都说你们好的时候、你们就有祸了．他们的祖宗待假先知也是这样。
 A.	心态：与世界同流合污 
 B.	所遭之祸：结局如同假先知
 
-<strong>爱仇敌 (路 6：27 – 36) 参 太 5：39 – 42 </strong>
-不同的人与标准
-1.	邪恶的人 – 以怨报德，以怨报怨
-2.	忘恩的人 – 以直报德，以怨报怨
-3.	平常的人 – 以德报德，以怨报怨
-4.	孔孟门徒 – 以德报德，以直报怨 (何以报德)
-5.	耶稣门徒 – 以德报德，以德报怨 (路 6：27 – 28)
+<strong>爱仇敌 (路 6：27 – 36) 参 太 5：39 – 42 </strong>   
+
+不同的人与标准     
+
+1.	邪恶的人 – 以怨报德，以怨报怨   
+
+2.	忘恩的人 – 以直报德，以怨报怨   
+
+3.	平常的人 – 以德报德，以怨报怨    
+
+4.	孔孟门徒 – 以德报德，以直报怨 (何以报德)   
+
+5.	耶稣门徒 – 以德报德，以德报怨 (路 6：27 – 28)    
+ 
 6.	神无条件牺牲的爱 –惟有基督在我们还作罪人的时候为我们死、神的爱就在此向我们显明了。罗5:8
 
-二个金律：
-1.	消极的 – 己所不欲，勿施与人
+<strong>二个金律：</strong>    
+
+1.	消极的 – 己所不欲，勿施与人    
+
 2.	积极的 – 你们愿意人怎样待你们、你们也要怎样待人。路6:31 
+<strong>   
 讨论：我们犯错时是否希人原谅？
-	   我们是否希望人对我们以德报怨？
+	我们是否希望人对我们以德报怨？
 
 这段的标准可能做到吗？
-可能，不单耶稣做到，新约的司提反 (徒 7：60) 及旧约的约瑟 (创 50：19 – 20)也都做到
+可能，不单耶稣做到，新约的司提反 (徒 7：60) 及旧约的约瑟 (创 50：19 – 20)也都做到</strong>
 
 如何才能做到？
 1.	有神的生命
