--- a/_posts/计算机/2016-01-02-MxNet中文指南.md
+++ b/_posts/计算机/2016-01-02-MxNet中文指南.md
@@ -1,3 +1,13 @@
+---
+layout: post
+title: MxNet中文指南
+category: 计算机
+tags: 数学  机器学习
+keywords: 
+description: 
+---
+
+
 The following is an overview of MXNet in Chinese. For english readers, please
 refer to our [NIPS learnsys paper](http://learningsys.org/papers/LearningSys_2015_paper_1.pdf)
 
