--- a/_posts/圣经/2015-12-26-路加福音查经2.md
+++ b/_posts/圣经/2015-12-26-路加福音查经2.md
@@ -16,42 +16,55 @@ description:
 
 <h4>这一课学习信徒生活的其它方面：</h4>   
 
-1.	与朋友的关系 (6：37 – 42)
-     A.	不定人罪。(论断原文是审判)因为审判及定罪是神的权柄。(37)
-     B.	要饶恕得罪你的人。(饶恕原文是念念不忘的记恨) 因为 (37)
-&emsp;&emsp;a.	神先饶恕了我们的罪。
-&emsp;&emsp;b.	我们还继续需要神的饶恕
-     C.	要慷慨。因为 (38)
-&emsp;&emsp;a	我们所有都是神所赐的
-&emsp;&emsp;b	把神所赐的恩典分给人就必蒙神赐更多的恩典
-     D.	要做领导带领人的，自己先要能看清，否则害人害己 (39)
-诗 119：105 你的话是我脚前的灯，路上的光
-     E.	要学习的应跟最好的老师 – 耶稣基督 (40)
+1.	与朋友的关系 (6：37 – 42)   
+
+     A.	不定人罪。(论断原文是审判)因为审判及定罪是神的权柄。(37)   
+
+     B.	要饶恕得罪你的人。(饶恕原文是念念不忘的记恨) 因为 (37)   
+     
+&emsp;&emsp;&emsp;&emsp;a.	神先饶恕了我们的罪。
+&emsp;&emsp;&emsp;&emsp;b.	我们还继续需要神的饶恕  
+
+     C.	要慷慨。因为 (38)   
+     
+&emsp;&emsp;a	我们所有都是神所赐的   
+&emsp;&emsp;b	把神所赐的恩典分给人就必蒙神赐更多的恩典    
+
+     D.	要做领导带领人的，自己先要能看清，否则害人害己 (39)诗 119：105 你的话是我脚前的灯，路上的光    
+     
+     E.	要学习的应跟最好的老师 – 耶稣基督 (40)   
+     
      F.	不单不能定人的罪，连批抨人都要小心 (41 – 42)
 &emsp;&emsp;a	你眼中别人的错误 (刺)，可能是由于自己的误解与偏见 (梁木)
 &emsp;&emsp;b	要帮助人改正错误，更要小心（哥林多前书5：10~13）
 &emsp;&emsp;&emsp;&emsp;i.	要在神面前确定自己的看法正确
 &emsp;&emsp;&emsp;&emsp;ii.	要在神面前省察自己的动机与态度   
 
-2.	生命与生活 (6：43 – 45)
-A.	以树比喻生命，以果子比喻生活
-B.	果子反映出树的品种
-C.	同样的品种还有质量的分别
+2.	生命与生活 (6：43 – 45)   
+
+A.	以树比喻生命，以果子比喻生活   
+
+B.	果子反映出树的品种    
+
+C.	同样的品种还有质量的分别   
+
 D.	影响质量的因素有那些
 &emsp;&emsp;a	环境，包括阳光，土质，水份，肥料等
-&emsp;&emsp;b	外在的影响如杂草，虫害等
+&emsp;&emsp;b	外在的影响如杂草，虫害等   
+
 E.	人的生活应反映出他内在的生命    
 
 **讨论：为什么有的信徒行为不好
 	反而有的非信徒行为良好**     （腓立比3：2-3）
 
-3.	信徒生活的根基 (6：46 – 49)
-A.	信徒生活的根基是神的话语
-B.	神的话语最完全的记载就是圣经
-C.	神的话语不只要学习，更要遵行
-D.	光学习只增加知识，不影响生命及生活
-E.	人的一生就如同盖房子
-F.	风吹，水冲代表恶劣的环境与遭遇       
+3.	信徒生活的根基 (6：46 – 49)   
+
+&emsp;&emsp;A.	信徒生活的根基是神的话语
+&emsp;&emsp;B.	神的话语最完全的记载就是圣经
+&emsp;&emsp;C.	神的话语不只要学习，更要遵行
+&emsp;&emsp;D.	光学习只增加知识，不影响生命及生活
+&emsp;&emsp;E.	人的一生就如同盖房子
+&emsp;&emsp;F.	风吹，水冲代表恶劣的环境与遭遇       
 
 **讨论：世人一般喜欢把自己的一生建在什么根基上？
 	你自己选了什么根基？
