--- a/_posts/圣经/2015-12-26-路加福音查经2.md
+++ b/_posts/圣经/2015-12-26-路加福音查经2.md
@@ -22,12 +22,13 @@ description:
 
      B.	要饶恕得罪你的人。(饶恕原文是念念不忘的记恨) 因为 (37)   
      
-&emsp;&emsp;&emsp;&emsp;a.	神先饶恕了我们的罪。
+&emsp;&emsp;&emsp;&emsp;a.	神先饶恕了我们的罪。   
+
 &emsp;&emsp;&emsp;&emsp;b.	我们还继续需要神的饶恕  
      C.	要慷慨。因为 (38)   
      
-&emsp;&emsp;a	我们所有都是神所赐的   
-&emsp;&emsp;b	把神所赐的恩典分给人就必蒙神赐更多的恩典    
+&emsp;&emsp;a.我们所有都是神所赐的   
+&emsp;&emsp;b.把神所赐的恩典分给人就必蒙神赐更多的恩典    
 
      D.	要做领导带领人的，自己先要能看清，否则害人害己 (39)诗 119：105 你的话是我脚前的灯，路上的光    
      
