--- a/_posts/圣经/2015-12-26-路加福音查经2.md
+++ b/_posts/圣经/2015-12-26-路加福音查经2.md
@@ -18,26 +18,26 @@ description:
 
 1.	与朋友的关系 (6：37 – 42)   
 
-     A.	不定人罪。(论断原文是审判)因为审判及定罪是神的权柄。(37)   
+    A.	不定人罪。(论断原文是审判)因为审判及定罪是神的权柄。(37)   
 
-     B.	要饶恕得罪你的人。(饶恕原文是念念不忘的记恨) 因为 (37)   
+    B.	要饶恕得罪你的人。(饶恕原文是念念不忘的记恨) 因为 (37)   
      
-&emsp;&emsp;&emsp;&emsp;a.	神先饶恕了我们的罪。   
+        - 神先饶恕了我们的罪。   
 
-&emsp;&emsp;&emsp;&emsp;b.	我们还继续需要神的饶恕   
+        - 我们还继续需要神的饶恕   
 
-     C.	要慷慨。因为 (38)   
-     
-&emsp;&emsp;a.我们所有都是神所赐的   
-&emsp;&emsp;b.把神所赐的恩典分给人就必蒙神赐更多的恩典    
+    C.	要慷慨。因为 (38)   
+    
+        - 我们所有都是神所赐的   
+        - 把神所赐的恩典分给人就必蒙神赐更多的恩典    
 
-     D.	要做领导带领人的，自己先要能看清，否则害人害己 (39)诗 119：105 你的话是我脚前的灯，路上的光    
+    D.	要做领导带领人的，自己先要能看清，否则害人害己 (39)诗 119：105 你的话是我脚前的灯，路上的光    
      
-     E.	要学习的应跟最好的老师 – 耶稣基督 (40)   
+    E.	要学习的应跟最好的老师 – 耶稣基督 (40)   
      
-     F.	不单不能定人的罪，连批抨人都要小心 (41 – 42)
-&emsp;&emsp;a	你眼中别人的错误 (刺)，可能是由于自己的误解与偏见 (梁木)
-&emsp;&emsp;b	要帮助人改正错误，更要小心（哥林多前书5：10~13）
+    F.	不单不能定人的罪，连批抨人都要小心 (41 – 42)
+        a.	你眼中别人的错误 (刺)，可能是由于自己的误解与偏见 (梁木)
+        b.	要帮助人改正错误，更要小心（哥林多前书5：10~13）
 &emsp;&emsp;&emsp;&emsp;i.	要在神面前确定自己的看法正确
 &emsp;&emsp;&emsp;&emsp;ii.	要在神面前省察自己的动机与态度   
 
