--- a/_posts/圣经/2015-12-26-路加福音查经2.md
+++ b/_posts/圣经/2015-12-26-路加福音查经2.md
@@ -51,12 +51,12 @@ description:
 3.	信徒生活的根基 (6：46 – 49)   
     -	信徒生活的根基是神的话语
     -	神的话语最完全的记载就是圣经
-    -	神的话语不只要学习，更要遵行
+    -	神的话语不只要学习，更要遵行（I will show you what he is like who comes to me and hears my words **and puts them into practice.**）
     -	光学习只增加知识，不影响生命及生活
     -	人的一生就如同盖房子
     -	风吹，水冲代表恶劣的环境与遭遇       
 
 **讨论：世人一般喜欢把自己的一生建在什么根基上？
 	你自己选了什么根基？
-	为什么建造在遵行神的话语上是最稳固的根基？**
+	为什么建造在遵行神的话语上是最稳固的根基？(个人感悟：个人的生活，工作完全的在信仰之中，是不可割裂的)**
 
