--- a/_posts/圣经/2015-12-26-路加福音查经2.md
+++ b/_posts/圣经/2015-12-26-路加福音查经2.md
@@ -30,7 +30,7 @@ description:
     - 不单不能定人的罪，连批抨人都要小心 (41 – 42)   
         > -	你眼中别人的错误 (刺)，可能是由于自己的误解与偏见 (梁木)
         > -	要帮助人改正错误，更要小心（哥林多前书5：10~13）    
-            >    * 要在神面前确定自己的看法正确
+            >    * 要在神面前确定自己的看法正确<br>
             >    * 要在神面前省察自己的动机与态度   
 
 2.	生命与生活 (6：43 – 45)   
