--- a/_posts/圣经/2015-12-26-路加福音查经2.md
+++ b/_posts/圣经/2015-12-26-路加福音查经2.md
@@ -37,10 +37,11 @@ description:
     -	以树比喻生命，以果子比喻生活   
     -	果子反映出树的品种    
     -	同样的品种还有质量的分别   
-    -	影响质量的因素有那些          
-        > * 环境，包括阳光，土质，水份，肥料等      
-        > * 外在的影响如杂草，虫害等       
-    -	人的生活应反映出他内在的生命
+    -	影响质量的因素有哪些？     
+    
+        > *	环境，包括阳光，土质，水份，肥料等。   
+        > *	外在的影响如杂草，虫害等   
+    -	人的生活应反映出他内在的生命  
 
 **讨论：为什么有的信徒行为不好
 	反而有的非信徒行为良好**     （腓立比3：2-3）
