--- a/_posts/圣经/2016-01-11-路加福音第7章.md
+++ b/_posts/圣经/2016-01-11-路加福音第7章.md
@@ -7,7 +7,37 @@ keywords:
 description: 
 ---
 ## 百夫长的信心 (1 – 10)
-1.	这百夫长是希律军队中之中级军官 (不是罗马的军队)
-2.	希律军队中有很多军官是混血的     
+1. 这百夫长是希律军队中之中级军官 (不是罗马的军队)
+2. 希律军队中有很多军官是混血的     
     - 血统上被以色列人认为是外邦人    
-    - 家庭背景上有相当强的犹太教背景
+    - 家庭背景上有相当强的犹太教背景    
+3. 在平时的生活行为上：    
+    - 他关爱他的奴隶    
+    - 不以强暴待他辖下的以色列百姓，却以爱心待他们    
+    - 相当认同犹太教，因此为他们建造会堂    
+4. 在态度上非常谦卑，体贴    
+    - 听到耶稣的事，不因他只是犹太的平民就不尊重耶稣    
+    - 不动用官方的力量，只托了一些在民间受尊重的人（长老）来求耶稣     
+    - 自以为不配见耶稣     
+    - 犹太人进到外邦人家被认为是不洁净的，因此他用“不敢当”来避免耶稣及那些长老所可能产生的不方便    
+5. 他信心的特点     
+    - 不凭眼见，不凭接触    
+    - 相信神说了就必成就    
+    - 第九节后半应译为“像这样的信心” When Jesus heard this,he was amazed.Turning to the crowd that was following him,he said,"I tell you,**I haven't seen faith like this is all Israel!(I haven't found such great faith even in Israel.)**"    
+6. 信心的果效是立刻的，完全的    
+
+## 主的怜悯-死人复活（11-17）   
+1. 拿因寡妇之子    
+    - 在那时代寡妇死了独生的儿子，是陷入完全的绝望
+    - 没有人来求耶稣，耶稣又被多人围绕   
+    - 单耶稣看见这需要，动了慈心      
+    - 主命令这少年人起来，他就复活起来了    
+2. 人看见死人复活，就十分震惊     
+3. 在全能的神面前，神迹无所谓大小，都是神的恩典    
+4. 认识超自然的医治：    
+    - 4：31~37 鬼附的人，扰乱主的事工，主立即把鬼赶出去    
+    - 5：12~15 因病人迫切的求，人得了医治   
+    - 5：17~26 看见因周围人迫切的代求，人得了医治    
+    - 上一段看见因百夫长的信心，他的仆人得了医治    
+    - 这一段中医治是因主的怜悯     
+    - 没有一个固定的方法使人得到超自然的医治，这完全是神的主权
