--- a/_posts/计算机/2016-01-02-MxNet中文指南.md
+++ b/_posts/计算机/2016-01-02-MxNet中文指南.md
@@ -8,7 +8,8 @@ description:
 ---
 
 
-The following is an overview of MXNet in Chinese. For english readers, please
+本文来自DMLC官方汉语说明
+**coypright@DMLC/mxnet** The following is an overview of MXNet in Chinese. For english readers, please
 refer to our [NIPS learnsys paper](http://learningsys.org/papers/LearningSys_2015_paper_1.pdf)
 
 # MXNet设计和实现简介
