--- a/_posts/圣经/2016-01-12-路加福音第7章第二部分.md
+++ b/_posts/圣经/2016-01-12-路加福音第7章第二部分.md
@@ -23,4 +23,9 @@ description:
          >    * 由于他所传讲的弥赛亚是最清楚的，因此他是先知中最大的
          >    * 他就是那位在以赛亚 40：3 – 9 所预言将要来主的先锋  
 2. 耶稣肯定施洗约翰的地位 (7：28)     
-    - 妇人所生 = 有肉体生命的人。在所有的人中，没有人比约翰对耶稣救赎的工作有更大的影响，因此他比所有的人更大
+    - 妇人所生 = 有肉体生命的人。在所有的人中，没有人比约翰对耶稣救赎的工作有更大的影响，因此他比所有的人更大 
+    - 神国里的人 = 重生得救，有属天生命的人。人如不重生，无论世上地位多高都要灭亡，因此属天的生命远比属地的生命更重要     
+3. 众人的反应 (7：29 – 30)
+    - 受约翰的洗 = 悔改
+    - 悔改的人，听见神的话就明白而接受
+    - 不悔改的人，因自己的骄傲就听不进神的话而拒绝
