--- a/_posts/圣经/2016-01-12-路加福音第7章第二部分.md
+++ b/_posts/圣经/2016-01-12-路加福音第7章第二部分.md
@@ -15,7 +15,7 @@ description:
 3. 一方面约翰听见耶稣行神迹的大能，但自己在监中耶稣却没有来救他，因此他的信心动摇而差两个门徒去问耶稣，祂是否就是神所差来的那一位？    
 4. 耶稣指出祂所行的就是在以赛亚书 29：18 – 19 节中预言弥赛亚所行的    
 5. 然祂是神，行事的主权在祂，不要因祂没有按我们的意思行就信心动摇       
-## 洗约翰是谁？ (7：24 – 30)     
+## 施洗约翰是谁？ (7：24 – 30)     
 1. 耶稣指出施洗约翰的身份 (7：26 – 27)      
     - 他是旧约先知中的一位，并且是最大的先知     
          >    * 旧约先知最主要的信息是预言弥赛亚及救恩的来临
@@ -29,3 +29,6 @@ description:
     - 受约翰的洗 = 悔改
     - 悔改的人，听见神的话就明白而接受
     - 不悔改的人，因自己的骄傲就听不进神的话而拒绝
+## 耶稣论世人  
+1. 上的人多半是幼稚并自我中心，只要人家与他的感觉与看法不同就批抨    
+2. 智慧 = 敬畏神 参 箴 9：10 但敬畏神的人从神的眼光来看事
