--- a/_posts/计算机/2016-01-12-神经网络识别手写体数字.md
+++ b/_posts/计算机/2016-01-12-神经网络识别手写体数字.md
@@ -20,7 +20,15 @@ description:
 
 在这一章中我们要写一程序实现神经网络，来通过学习识别手写体数字。整个程序只有74行，没有使用什么特别的神经网络库。但这个程序没有人干预的情况下还是能达到96%的识别率。而且，接下来的一章里我们通过改进算法能够将算法识别率提高到99%。实际上，最好的商业化神经网络已经被用在银行处理支票以及邮政部门识别地址上了。    
 
-我们关注手写体识别是因为一般来说它是学习神经网路的非常好的原型问题：极具挑战性；能够识别手写体数字可是不小的成就奥---而且并不要求非常复杂的解决方案或者巨大的计算量。
+我们关注手写体识别是因为一般来说它是学习神经网路的非常好的原型问题：极具挑战性；能够识别手写体数字可是不小的成就奥---而且并不要求非常复杂的解决方案或者巨大的计算量。进一步来说，这也是发展更先进技术（比如deepLearning）的好方法。所以本书中我们会不断的返回手写体识别这个问题来进行研究。本书后面，我们会讨论如何将这些思想应用在其他诸如计算机视觉，语音识别，自然语言处理等领域。    
+
+当然，如果这一节仅仅是在介绍如何写一段程序来识别手写体，那么这一章本可以很短。但实际上沿着这条思路下来，我们会**衍生**（develop？）出很多关于神经网络的关键思想，比如两种不同的神经元（感知机和sigmoid 神经元），以及被广泛熟知的标准神经网络学习算法：随机梯度下降算法。自始至终，我都在极力地解释为什么这样来做，并且一直在给大家建立一种神经网络的直观印象。如果我详细阐释基本的概念，这会需要更多的讨论，但是对于你更深层次的理解这些概念还是很有帮助的！最后在本书的最后一章，我们将会理解深度学习是什么，以及为什么它这么重要。    
+
+## 感知器    
+神经网络是什么？开始我将会解释一种被称为感知器的人工神经元。神经元这一概念最早是由[Frank Rosenblatt](https://en.wikipedia.org/wiki/Frank_Rosenblatt)于1950s到1960s受[Warren McCulloch](https://en.wikipedia.org/wiki/Warren_McCulloch)和[Walter Pitts](https://en.wikipedia.org/wiki/Walter_Pitts)的[研究](http://scholar.google.ca/scholar?cluster=4035975255085082870)所启发而提出的。今天，使用其他的人工神经元模型更为普遍---在本书中以及当前人工神经网络的研究中主要被使用的神经元模型被称为 sigmoid神经元。我们也将会简单讲解 sigmoid 神经元。但为了明白为什么sigmoid 神经元如此定义，还是有必要首先去花些时间来理解感知器。    
+
+那么感知器是如何工作的呢？一个感知器接收若干**二进制**（binary?）输入，x1,x2,x3
+
 
 
   [1]: ./images/00.png "00.png"
