--- a/_posts/计算机/2016-01-12-神经网络识别手写体数字.md
+++ b/_posts/计算机/2016-01-12-神经网络识别手写体数字.md
@@ -46,8 +46,7 @@ description:
     <mn>2</mn>
   </msub>
   <mo>,</mo>
-</math>
-,...,然后产生一个二进制输出：
+</math>,...,然后产生一个二进制输出：
 <center>    
 
 ![enter description here][3]
