--- a/_posts/计算机/2016-01-12-神经网络识别手写体数字.md
+++ b/_posts/计算机/2016-01-12-神经网络识别手写体数字.md
@@ -78,7 +78,20 @@ description:
   </msub>
   <mo>,</mo>
   <mo>&#x2026;<!-- … --></mo>
-</math>用这些实数来表示各自对应的输入关于输出的**重要性**（importance?）。
+</math>用这些实数来表示各自对应的输入关于输出的**重要性**（importance?）。输入的加权和<math xmlns="http://www.w3.org/1998/Math/MathML">
+  <munder>
+    <mo>&#x2211;<!-- ∑ --></mo>
+    <mi>j</mi>
+  </munder>
+  <msub>
+    <mi>w</mi>
+    <mi>j</mi>
+  </msub>
+  <msub>
+    <mi>x</mi>
+    <mi>j</mi>
+  </msub>
+</math>大于或者小于阈值决定了
 
   [1]: ./images/00.png "00.png"
   [2]: ./images/01.png "01.png"
