--- a/_posts/计算机/2016-01-12-神经网络识别手写体数字.md
+++ b/_posts/计算机/2016-01-12-神经网络识别手写体数字.md
@@ -7,6 +7,7 @@ keywords:
 description: 
 ---
 
+
 人类视觉系统简直就是一个世界奇迹。看一下接下来的手写体数字序列：     
 <center>
 
@@ -32,66 +33,13 @@ description:
 
 ## 感知器    
 神经网络是什么？开始我将会解释一种被称为感知器的人工神经元。神经元这一概念最早是由[Frank Rosenblatt](https://en.wikipedia.org/wiki/Frank_Rosenblatt)于1950s到1960s受[Warren McCulloch](https://en.wikipedia.org/wiki/Warren_McCulloch)和[Walter Pitts](https://en.wikipedia.org/wiki/Walter_Pitts)的[研究](http://scholar.google.ca/scholar?cluster=4035975255085082870)所启发而提出的。今天，使用其他的人工神经元模型更为普遍---在本书中以及当前人工神经网络的研究中主要被使用的神经元模型被称为 sigmoid神经元。我们也将会简单讲解 sigmoid 神经元。但为了明白为什么sigmoid 神经元如此定义，还是有必要首先去花些时间来理解感知器。    
-
 那么感知器是如何工作的呢？一个感知器接收若干**二进制**（binary?）输入,      
-
-<math xmlns="http://www.w3.org/1998/Math/MathML">
-  <msub>
-    <mi>x</mi>
-    <mn>1</mn>
-  </msub>
-  <mo>,</mo>
-  <msub>
-    <mi>x</mi>
-    <mn>2</mn>
-  </msub>
-  <mo>,</mo>
-</math>,...,然后产生一个二进制输出：
+<img src="http://www.forkosh.com/mathtex.cgi? x_1, x_2, \ldots">然后产生一个二进制输出：
 <center>    
 
 ![enter description here][3]
 </center>
-这个例子中的感知器有三个输入,<math xmlns="http://www.w3.org/1998/Math/MathML">
-  <msub>
-    <mi>x</mi>
-    <mn>1</mn>
-  </msub>
-  <mo>,</mo>
-  <msub>
-    <mi>x</mi>
-    <mn>2</mn>
-  </msub>
-  <mo>,</mo>
-  <msub>
-    <mi>x</mi>
-    <mn>3</mn>
-  </msub>
-</math>。一般来说它可以有更多或者更少的输入。Rosenblatt提出了一种简单的规则来计算输出---权重：<math xmlns="http://www.w3.org/1998/Math/MathML">
-  <msub>
-    <mi>w</mi>
-    <mn>1</mn>
-  </msub>
-  <mo>,</mo>
-  <msub>
-    <mi>w</mi>
-    <mn>2</mn>
-  </msub>
-  <mo>,</mo>
-  <mo>&#x2026;<!-- … --></mo>
-</math>用这些实数来表示各自对应的输入关于输出的**重要性**（importance?）。输入的加权和<math xmlns="http://www.w3.org/1998/Math/MathML">
-  <munder>
-    <mo>&#x2211;<!-- ∑ --></mo>
-    <mi>j</mi>
-  </munder>
-  <msub>
-    <mi>w</mi>
-    <mi>j</mi>
-  </msub>
-  <msub>
-    <mi>x</mi>
-    <mi>j</mi>
-  </msub>
-</math>大于或者小于阈值决定了
+这个例子中的感知器有三个输入,<img src="http://www.forkosh.com/mathtex.cgi? x_1, x_2,x_3, \ldots">。一般来说它可以有更多或者更少的输入。Rosenblatt提出了一种简单的规则来计算输出---权重：<img src="http://www.forkosh.com/mathtex.cgi? w_1, w_2, \ldots">用这些实数来表示各自对应的输入关于输出的**重要性**（importance?）。输入的加权和<img src="http://www.forkosh.com/mathtex.cgi? \sum_j w_j x_j">大于或者小于阈值决定了
 
   [1]: ./images/00.png "00.png"
   [2]: ./images/01.png "01.png"
