--- a/_posts/计算机/2016-01-12-神经网络识别手写体数字.md
+++ b/_posts/计算机/2016-01-12-神经网络识别手写体数字.md
@@ -32,9 +32,9 @@ description:
 当然，如果这一节仅仅是在介绍如何写一段程序来识别手写体，那么这一章本可以很短。但实际上沿着这条思路下来，我们会**衍生**（develop？）出很多关于神经网络的关键思想，比如两种不同的神经元（感知机和sigmoid 神经元），以及被广泛熟知的标准神经网络学习算法：随机梯度下降算法。自始至终，我都在极力地解释为什么这样来做，并且一直在给大家建立一种神经网络的直观印象。如果我详细阐释基本的概念，这会需要更多的讨论，但是对于你更深层次的理解这些概念还是很有帮助的！最后在本书的最后一章，我们将会理解深度学习是什么，以及为什么它这么重要。    
 
 ## 感知器    
-神经网络是什么？开始我将会解释一种被称为感知器的人工神经元。神经元这一概念最早是由[Frank Rosenblatt](https://en.wikipedia.org/wiki/Frank_Rosenblatt)于1950s到1960s受[Warren McCulloch](https://en.wikipedia.org/wiki/Warren_McCulloch)和[Walter Pitts](https://en.wikipedia.org/wiki/Walter_Pitts)的[研究](http://scholar.google.ca/scholar?cluster=4035975255085082870)所启发而提出的。今天，使用其他的人工神经元模型更为普遍---在本书中以及当前人工神经网络的研究中主要被使用的神经元模型被称为 sigmoid神经元。我们也将会简单讲解 sigmoid 神经元。但为了明白为什么sigmoid 神经元如此定义，还是有必要首先去花些时间来理解感知器。    
-那么感知器是如何工作的呢？一个感知器接收若干**二进制**（binary?）输入,      
-<img src="http://www.forkosh.com/mathtex.cgi? x_1, x_2, \ldots">然后产生一个二进制输出：
+神经网络是什么？开始我将会解释一种被称为感知器的人工神经元。神经元这一概念最早是由[Frank Rosenblatt](https://en.wikipedia.org/wiki/Frank_Rosenblatt)于1950s到1960s受[Warren McCulloch](https://en.wikipedia.org/wiki/Warren_McCulloch)和[Walter Pitts](https://en.wikipedia.org/wiki/Walter_Pitts)的[研究](http://scholar.google.ca/scholar?cluster=4035975255085082870)所启发而提出的。今天，使用其他的人工神经元模型更为普遍---在本书中以及当前人工神经网络的研究中主要被使用的神经元模型被称为 sigmoid神经元。我们也将会简单讲解 sigmoid 神经元。但为了明白为什么sigmoid 神经元如此定义，还是有必要首先去花些时间来理解感知器。      
+
+那么感知器是如何工作的呢？一个感知器接收若干**二进制**（binary?）输入,<img src="http://www.forkosh.com/mathtex.cgi? x_1, x_2, \ldots">然后产生一个二进制输出：
 <center>    
 
 ![enter description here][3]
