--- a/_posts/计算机/2016-01-12-神经网络识别手写体数字.md
+++ b/_posts/计算机/2016-01-12-神经网络识别手写体数字.md
@@ -48,7 +48,17 @@ description:
       \end{array} \right.
 \tag{1}\end{eqnarray} ">     
 
-以上便是神经元如何工作的。
+以上便是神经元如何工作的。      
+
+上面所述的是基本的数学模型。你也可以把神经元想象成一个通过衡量各种因素后能够做决定的黑箱子。举个不是很恰当但容易理解的例子吧---以后我们会举更多合适的例子。假设你听说这周末长城门票五折（假设你在北京呢），而且你很喜欢装X。心里犯嘀咕去不去呢？你主要想的是下面这几个因素：     
+1.  天气不知道合不合适？
+2.  不知道女票（或者男票）想不想陪着你？ 
+3.  那天会不会堵车很严重。    
+
+我们可以将这三个因素用对应的二元变量  <img src="http://www.forkosh.com/mathtex.cgi? x_1,x_2,x_3">  来表示。举例来说：如果天气好，就设 <img src="http://www.forkosh.com/mathtex.cgi? x_1">  
+
+
+
 
 
 
