--- a/_posts/计算机/2016-01-12-神经网络识别手写体数字.md
+++ b/_posts/计算机/2016-01-12-神经网络识别手写体数字.md
@@ -55,7 +55,9 @@ description:
 2.  不知道女票（或者男票）想不想陪着你？ 
 3.  那天会不会堵车很严重。    
 
-我们可以将这三个因素用对应的二元变量  <img src="http://www.forkosh.com/mathtex.cgi? x_1,x_2,x_3">  来表示。举例来说：如果天气好，就设 <img src="http://www.forkosh.com/mathtex.cgi? x_1">  
+我们可以将这三个因素用对应的二元变量  <img src="http://www.forkosh.com/mathtex.cgi? x_1,x_2,x_3">  来表示。举例来说：如果天气好，就令 <img src="http://www.forkosh.com/mathtex.cgi? x_1"> = 1,否则为 0；同样，女（男）票愿意去就令 <img src="http://www.forkosh.com/mathtex.cgi? x_2"> = 1,否则为 0；对于堵车也这样来做。      
+
+
 
 
 
