--- a/_posts/计算机/2016-01-12-神经网络识别手写体数字.md
+++ b/_posts/计算机/2016-01-12-神经网络识别手写体数字.md
@@ -7,6 +7,16 @@ keywords:
 description: 
 ---
 
+$$ x^2 = $$  
+$$
+ \begin{eqnarray}
+  \mbox{output} & = & \left\{ \begin{array}{ll}
+      0 & \mbox{if } \sum_j w_j x_j \leq \mbox{ threshold} \\
+      1 & \mbox{if } \sum_j w_j x_j > \mbox{ threshold}
+      \end{array} \right.
+\tag{1}\end{eqnarray}
+$$
+
 
 人类视觉系统简直就是一个世界奇迹。看一下接下来的手写体数字序列：     
 <center>
