--- a/_posts/计算机/2016-01-12-神经网络识别手写体数字.md
+++ b/_posts/计算机/2016-01-12-神经网络识别手写体数字.md
@@ -7,15 +7,7 @@ keywords:
 description: 
 ---
 
-$$ x^2 = $$  
-$$
- \begin{eqnarray}
-  \mbox{output} & = & \left\{ \begin{array}{ll}
-      0 & \mbox{if } \sum_j w_j x_j \leq \mbox{ threshold} \\
-      1 & \mbox{if } \sum_j w_j x_j > \mbox{ threshold}
-      \end{array} \right.
-\tag{1}\end{eqnarray}
-$$
+
 
 
 人类视觉系统简直就是一个世界奇迹。看一下接下来的手写体数字序列：     
@@ -52,12 +44,7 @@ $$
 这个例子中的感知器有三个输入,<img src="http://www.forkosh.com/mathtex.cgi? x_1, x_2,x_3, \ldots">。一般来说它可以有更多或者更少的输入。Rosenblatt提出了一种简单的规则来计算输出---权重：<img src="http://www.forkosh.com/mathtex.cgi? w_1, w_2, \ldots">用这些实数来表示各自对应的输入关于输出的**重要性**（importance?）。输入的加权和<img src="http://www.forkosh.com/mathtex.cgi? \sum_j w_j x_j">大于或者小于阈值（threshold value）决定了神经元的输出是0或1。阈值就像权重一样是个实数，同样也是神经元的一个参数。我们用精确的代数式来表达：     
 
 
-<img src="http://www.forkosh.com/mathtex.cgi? \begin{eqnarray}
-  \mbox{output} & = & \left\{ \begin{array}{ll}
-      0 & \mbox{if } \sum_j w_j x_j \leq \mbox{ threshold} \\
-      1 & \mbox{if } \sum_j w_j x_j > \mbox{ threshold}
-      \end{array} \right.
-\tag{1}\end{eqnarray} ">     
+<img src="http://www.forkosh.com/mathtex.cgi? \begin{eqnarray}  \mbox{output} & = & \left\{ \begin{array}{ll}   0 & \mbox{if } \sum_j w_j x_j \leq \mbox{ threshold} \\  1 & \mbox{if } \sum_j w_j x_j > \mbox{ threshold}     \end{array} \right. \tag{1}\end{eqnarray} ">     
 
 
 以上便是神经元如何工作的。      
