--- a/_posts/计算机/2016-01-12-神经网络识别手写体数字.md
+++ b/_posts/计算机/2016-01-12-神经网络识别手写体数字.md
@@ -46,7 +46,7 @@ description:
 
 <img src="http://www.forkosh.com/mathtex.cgi? \begin{eqnarray}  \mbox{output} & = & \left\{ \begin{array}{ll}   0 & \mbox{if } \sum_j w_j x_j \leq \mbox{ threshold} \\  1 & \mbox{if } \sum_j w_j x_j > \mbox{ threshold}     \end{array} \right. \tag{1}\end{eqnarray}" >     
 
-
+  
 以上便是神经元如何工作的。      
 
 上面所述的是基本的数学模型。你也可以把神经元想象成一个通过衡量各种因素后能够做决定的黑箱子。举个不是很恰当但容易理解的例子吧---以后我们会举更多合适的例子。假设你听说这周末长城门票五折（假设你在北京呢），而且你很喜欢装X。心里犯嘀咕去不去呢？你主要想的是下面这几个因素：     
@@ -65,6 +65,6 @@ description:
 
 
 
-  [1]: ./images/00.png "00.png"
-  [2]: ./images/01.png "01.png"
-  [3]: ./images/02.png "02.png"
+  [1]: https://raw.githubusercontent.com/anxingle/anxingle.github.io/master/public/img/ML/00.png "00.png"
+  [2]: https://raw.githubusercontent.com/anxingle/anxingle.github.io/master/public/img/ML/01.png "01.png"
+  [3]: https://raw.githubusercontent.com/anxingle/anxingle.github.io/master/public/img/ML/02.png "02.png"
