--- a/_posts/计算机/2016-01-12-神经网络识别手写体数字.md
+++ b/_posts/计算机/2016-01-12-神经网络识别手写体数字.md
@@ -58,7 +58,7 @@ description:
 
 我们可以将这三个因素用对应的二元变量  <img src="http://www.forkosh.com/mathtex.cgi? x_1,x_2,x_3">  来表示。举例来说：如果天气好，就令 <img src="http://www.forkosh.com/mathtex.cgi? x_1"> = 1,否则为 0；同样，女（男）票愿意去就令 <img src="http://www.forkosh.com/mathtex.cgi? x_2"> = 1,否则为 0；对于堵车也这样来做。      
 
-现在假设你特别想去，不管女（男）票愿不愿意陪你去了，
+现在假设你特别想去，不管女（男）票愿不愿意陪你去了，也不管堵车怎么回事了。但那天天气真的很重要啊，你总不能冒大雨游长城吧！这时候可以用神经元来模拟这次决策。一种方式是令 <img src="http://www.forkosh.com/mathtex.cgi? w_1"> = 6来对应天气,<img src="http://www.forkosh.com/mathtex.cgi? w_2"> = 2来对应
 
 
 
