--- a/_posts/计算机/2016-01-12-神经网络识别手写体数字.md
+++ b/_posts/计算机/2016-01-12-神经网络识别手写体数字.md
@@ -53,12 +53,16 @@ description:
 
 上面所述的是基本的数学模型。你也可以把神经元想象成一个通过衡量各种因素后能够做决定的黑箱子。举个不是很恰当但容易理解的例子吧---以后我们会举更多合适的例子。假设你听说这周末长城门票五折（假设你在北京呢），而且你很喜欢装X。心里犯嘀咕去不去呢？你主要想的是下面这几个因素：     
 1.  天气不知道合不合适？
-2.  不知道女票（或者男票）想不想陪着你？ 
+2.  不知道女（或者男）友想不想陪着你？ 
 3.  那天会不会堵车很严重。    
 
-我们可以将这三个因素用对应的二元变量  <img src="http://www.forkosh.com/mathtex.cgi? x_1,x_2,x_3">  来表示。举例来说：如果天气好，就令 <img src="http://www.forkosh.com/mathtex.cgi? x_1"> = 1,否则为 0；同样，女（男）票愿意去就令 <img src="http://www.forkosh.com/mathtex.cgi? x_2"> = 1,否则为 0；对于堵车也这样来做。      
+我们可以将这三个因素用对应的二元变量  <img src="http://www.forkosh.com/mathtex.cgi? x_1,x_2,x_3">  来表示。举例来说：如果天气好，就令 <img src="http://www.forkosh.com/mathtex.cgi? x_1"> = 1,否则为 0；同样，女（男）友愿意去就令 <img src="http://www.forkosh.com/mathtex.cgi? x_2"> = 1,否则为 0；对于堵车也这样来做。      
 
-现在假设你特别想去，不管女（男）票愿不愿意陪你去了，也不管堵车怎么回事了。但那天天气真的很重要啊，你总不能冒大雨游长城吧！这时候可以用神经元来模拟这次决策。一种方式是令 <img src="http://www.forkosh.com/mathtex.cgi? w_1"> = 6来对应天气,<img src="http://www.forkosh.com/mathtex.cgi? w_2"> = 2和<img src="http://www.forkosh.com/mathtex.cgi? w_3"> = 2 来对应女（男）票和交通情况。最大值
+现在假设你特别想去，不管女（男）友愿不愿意陪你去了，也不管堵车怎么回事了。但那天天气真的很重要啊，你总不能冒大雨游长城吧！这时候可以用神经元来模拟这次决策。一种方式是令 <img src="http://www.forkosh.com/mathtex.cgi? w_1"> = 6来对应天气,<img src="http://www.forkosh.com/mathtex.cgi? w_2"> = 2和<img src="http://www.forkosh.com/mathtex.cgi? w_3"> = 2 来对应女（男）友和交通情况。最大值<img src="http://www.forkosh.com/mathtex.cgi? w_1"> 表示天气因素要比其他两种情况影响大。最后（假设）你选择阈值为5。最后这个神经元运行决策模型的时候，如果天气好，它就输出1，反之输出0。你会发现输出和女友愿意与否，交通情况没有什么关系。     
+
+通过给阈值和权重设置不同的值，我们能够得到不同的决策模型。举例来说，令阈值为3。你会发现天气好或者女友愿意，交通也好都会导致输出为1。换句话说，它是一个不同的模型。减少阈值意味着你更倾向于去长城。     
+
+
 
 
 
