--- a/_posts/计算机/2016-01-12-神经网络识别手写体数字.md
+++ b/_posts/计算机/2016-01-12-神经网络识别手写体数字.md
@@ -62,7 +62,11 @@ description:
 
 通过给阈值和权重设置不同的值，我们能够得到不同的决策模型。举例来说，令阈值为3。你会发现天气好或者女友愿意，交通也好都会导致输出为1。换句话说，它是一个不同的模型。减少阈值意味着你更倾向于去长城。     
 
+很明显，神经元不是一个完整的人类决策模型！但这个例子阐释了神经元如何衡量不同因素后做出决策的。下面由很多神经元组成的复杂网络似乎可以做出精细的决定：
+<center>     
+![神经网络][5]      
 
+</center>
 
 
 
@@ -75,4 +79,5 @@ description:
   [2]:http://7xomz3.com1.z0.glb.clouddn.com/01.png
   [3]:http://7xomz3.com1.z0.glb.clouddn.com/02.png
   [4]:http://7xomz3.com1.z0.glb.clouddn.com/03.jpg
+  [5]:http://7xomz3.com1.z0.glb.clouddn.com/net.png
   
