--- a/_posts/计算机/2016-01-12-神经网络识别手写体数字.md
+++ b/_posts/计算机/2016-01-12-神经网络识别手写体数字.md
@@ -58,16 +58,22 @@ description:
 
 我们可以将这三个因素用对应的二元变量  <img src="http://www.forkosh.com/mathtex.cgi? x_1,x_2,x_3">  来表示。举例来说：如果天气好，就令 <img src="http://www.forkosh.com/mathtex.cgi? x_1"> = 1,否则为 0；同样，女（男）友愿意去就令 <img src="http://www.forkosh.com/mathtex.cgi? x_2"> = 1,否则为 0；对于堵车也这样来做。      
 
-现在假设你特别想去，不管女（男）友愿不愿意陪你去了，也不管堵车怎么回事了。但那天天气真的很重要啊，你总不能冒大雨游长城吧！这时候可以用神经元来模拟这次决策。一种方式是令 <img src="http://www.forkosh.com/mathtex.cgi? w_1"> = 6来对应天气,<img src="http://www.forkosh.com/mathtex.cgi? w_2"> = 2和<img src="http://www.forkosh.com/mathtex.cgi? w_3"> = 2 来对应女（男）友和交通情况。最大值<img src="http://www.forkosh.com/mathtex.cgi? w_1"> 表示天气因素要比其他两种情况影响大。最后（假设）你选择阈值为5。最后这个神经元运行决策模型的时候，如果天气好，它就输出1，反之输出0。你会发现输出和女友愿意与否，交通情况没有什么关系。     
+现在假设你特别想去，不管女（男）友愿不愿意陪你去了，也不管堵车怎么回事了。但那天天气真的很重要啊，你总不能冒大雨游长城吧！这时候可以用感知器来模拟这次决策。一种方式是令 <img src="http://www.forkosh.com/mathtex.cgi? w_1"> = 6来对应天气,<img src="http://www.forkosh.com/mathtex.cgi? w_2"> = 2和<img src="http://www.forkosh.com/mathtex.cgi? w_3"> = 2 来对应女（男）友和交通情况。最大值<img src="http://www.forkosh.com/mathtex.cgi? w_1"> 表示天气因素要比其他两种情况影响大。最后（假设）你选择阈值为5。最后这个神经元运行决策模型的时候，如果天气好，它就输出1，反之输出0。你会发现输出和女友愿意与否，交通情况没有什么关系。     
 
 通过给阈值和权重设置不同的值，我们能够得到不同的决策模型。举例来说，令阈值为3。你会发现天气好或者女友愿意，交通也好都会导致输出为1。换句话说，它是一个不同的模型。减少阈值意味着你更倾向于去长城。     
 
-很明显，神经元不是一个完整的人类决策模型！但这个例子阐释了神经元如何衡量不同因素后做出决策的。下面由很多神经元组成的复杂网络似乎可以做出精细的决定：
-<center>     
-![神经网络][5]      
+很明显，感知器不是一个完整的人类决策模型！但上述例子阐释了感知器如何衡量不同因素后做出决策的。下面由很多感知器组成的复杂网络似乎可以做出精细的决定：      
+<center>    
 
-</center>
+![enter description here][5]
 
+</center>      
+
+在这个网络中，第一列感知器们我们称为第一层---通过对输入进行加权它**做出三个简单的决定**（is making three very simple decisions）。第二层中每个感知器通过对上一层感知器的输出结果加权后做出决定。通过这种方式第二层的感知器能够在比第一层的感知器更加复杂的和抽象的层面上做出决策。第三层的感知器甚至能做出更加复杂的决定。这样下去，多层感知器网络就可以做出复杂的决策。      
+
+顺便说一句，我们在这里定义的感知器仅有一个简单的输出。上面的这个感知器网络似乎有很多输出，实际上它们还是只有一个。上面的感知器的多路输出的箭头仅仅是表示这层感知器被下一层的多个感知器所使用。这样画肯定比画一条线（输出）然后再分裂为多个显得简洁。    
+
+简化对感知器的描述。 <img src="http://www.forkosh.com/mathtex.cgi? \sum_j w_j x_j > \mbox{threshold}"> 显得相当麻烦，这里对符号进行两处变换。
 
 
 
