--- a/_posts/计算机/2016-01-12-神经网络识别手写体数字.md
+++ b/_posts/计算机/2016-01-12-神经网络识别手写体数字.md
@@ -73,7 +73,7 @@ description:
 
 顺便说一句，我们在这里定义的感知器仅有一个简单的输出。上面的这个感知器网络似乎有很多输出，实际上它们还是只有一个。上面的感知器的多路输出的箭头仅仅是表示这层感知器被下一层的多个感知器所使用。这样画肯定比画一条线（输出）然后再分裂为多个显得简洁。    
 
-简化对感知器的描述。 <img src="http://www.forkosh.com/mathtex.cgi? \sum_j w_j x_j %3E \mbox{threshold}"> 显得相当麻烦，这里对符号进行两处变换。
+简化对感知器的描述。 <img src="http://www.forkosh.com/mathtex.cgi? %5Csum_j w_j x_j %3E %5Cmbox{threshold}"> 显得相当麻烦，这里对符号进行两处变换。
 
 
 
