--- a/_posts/计算机/2016-01-12-神经网络识别手写体数字.md
+++ b/_posts/计算机/2016-01-12-神经网络识别手写体数字.md
@@ -75,7 +75,14 @@ description:
 
 
 
-简化对感知器的描述。<img src="http://www.forkosh.com/mathtex.cgi? %5Csum_j w_j x_j %3E %5Cmbox{threshold}"> 显得相当麻烦，这里对符号进行两处变换。第一处是将<img src="http://www.forkosh.com/mathtex.cgi? %5Csum_j w_j x_j">换成点积形式：<img src="http://www.forkosh.com/mathtex.cgi? w %5Ccdot x %5Cequiv %5Csum_j w_j x_j">,这里<img src="http://www.forkosh.com/mathtex.cgi? w">和<img src="http://www.forkosh.com/mathtex.cgi? x">分别是权重和输入的向量形式。第二处变换是将阈值移到等式的左边，也即用感知器中常见的概念偏差（bias）来代替：<img src="http://www.forkosh.com/mathtex.cgi?b %5Cequiv-%5Cmbox{threshold}">
+简化对感知器的描述。<img src="http://www.forkosh.com/mathtex.cgi? %5Csum_j w_j x_j %3E %5Cmbox{threshold}"> 显得相当麻烦，这里对符号进行两处变换。第一处是将<img src="http://www.forkosh.com/mathtex.cgi? %5Csum_j w_j x_j">换成点积形式：<img src="http://www.forkosh.com/mathtex.cgi? w %5Ccdot x %5Cequiv %5Csum_j w_j x_j">,这里<img src="http://www.forkosh.com/mathtex.cgi? w">和<img src="http://www.forkosh.com/mathtex.cgi? x">分别是权重和输入的向量形式。第二处变换是将阈值移到等式的左边，也即用感知器中常见的概念偏差（bias）来代替：<img src="http://www.forkosh.com/mathtex.cgi?b %5Cequiv-%5Cmbox{threshold}">。这样感知器可重写为如下形式：      
+   
+<center>      
+
+![enter description here][6]
+
+
+</center>
 。
 
 
