--- a/_posts/计算机/2016-01-12-神经网络识别手写体数字.md
+++ b/_posts/计算机/2016-01-12-神经网络识别手写体数字.md
@@ -82,8 +82,9 @@ description:
 ![enter description here][6]
 
 
-</center>
-。
+</center>你完全可以将偏差理解成感知器输出1的倾向程度。或者从生物学角度这么理解吧，偏差是衡量一个感知器被激活的难易程度。对于一个有较大偏差的感知器，它非常容易输出1。但是如果偏差是负的，感知器便很难输出1了。很明显，引入偏差对在描述感知器简洁性方面影响不大，但是之后我们会发现这样做使得代数式会更加简洁。正因如此，以后书中我们都会将阈值用偏差来代替。      
+
+以上我们将感知器描述成衡量各种因素后做出决策的决策箱。感知器另外一种用处就是对基本的像 “与”，“或”和“与非”这样的树立逻辑函数进行运算。
 
 
 
