--- a/_posts/计算机/2016-01-12-神经网络识别手写体数字.md
+++ b/_posts/计算机/2016-01-12-神经网络识别手写体数字.md
@@ -90,8 +90,10 @@ description:
 ![enter description here][7]
 
 
-</center>
+</center>我们会发现00 输入产生了输出1，因为（-2）*0+（-2）*0+3=3 是正的。这里我们引入符号* 使该乘法显式化。相同的计算表明 输入01 和10 都会产生同样的输出1。但是输入11 却产生输出0，因为 (−2)∗1+(−2)∗1+3=−1
+是负的。通过以上分析我们知道这个感知器的作用是一个“与非”门。     
 
+这个“与非”门的例子说明我们可以使用感知器计算简单逻辑函数。实际上我们可以使用感知器网络计算任意的逻辑函数。
 
 
 
