--- a/_posts/计算机/2016-01-12-神经网络识别手写体数字.md
+++ b/_posts/计算机/2016-01-12-神经网络识别手写体数字.md
@@ -94,7 +94,21 @@ description:
 是负的。通过以上分析我们知道这个感知器的作用是一个“与非”门。         
 
 
-这个“与非”门的例子说明我们可以使用感知器计算简单逻辑函数。实际上我们可以使用感知器网络计算任意的逻辑函数。
+这个“与非”门的例子说明我们可以使用感知器计算简单逻辑函数。实际上我们可以使用感知器网络计算任意的逻辑函数。因为“与非”门在计算中非常普遍，所以我们可以使用“与非”门构建任意计算。举个例子，我们使用若干“与非”门来组建一个电路对<img src="http://www.forkosh.com/mathtex.cgi?x_1"> 和<img src="http://www.forkosh.com/mathtex.cgi?x_2">相加。这就需要计算<img src="http://www.forkosh.com/mathtex.cgi?x_1 %5Coplus x_2">的逐位相加和，以及进位（当<img src="http://www.forkosh.com/mathtex.cgi?x_1">和<img src="http://www.forkosh.com/mathtex.cgi?x_2">都是1时，要进1 ）。进位位正好是<img src="http://www.forkosh.com/mathtex.cgi?x_1x_2">:      
+<center>      
+
+![enter description here][8]
+
+
+</center>
+如果将上述电路转化为等价的感知器网络，就需要将所有的“与非”门替换为两路输入的感知器，每个感知器的权重为-2，偏差为3。        
+
+<center>      
+
+![enter description here][9]
+
+
+</center>
 
 
 
@@ -108,4 +122,5 @@ description:
   [5]:http://7xomz3.com1.z0.glb.clouddn.com/net.png
   [6]:http://7xomz3.com1.z0.glb.clouddn.com/04.jpg
   [7]:http://7xomz3.com1.z0.glb.clouddn.com/05.jpg
-  
+  [8]:http://7xomz3.com1.z0.glb.clouddn.com/06.jpg
+  [9]:http://7xomz3.com1.z0.glb.clouddn.com/07.jpg  
