--- a/_posts/计算机/2016-01-12-神经网络识别手写体数字.md
+++ b/_posts/计算机/2016-01-12-神经网络识别手写体数字.md
@@ -101,7 +101,7 @@ description:
 
 
 </center>
-如果将上述电路转化为等价的感知器网络，就需要将所有的“与非”门替换为两路输入的感知器，每个感知器的权重为-2，偏差为3。        
+如果将上述电路转化为等价的感知器网络，就需要将所有的“与非”门替换为两路输入的感知器，每个感知器的权重为-2，偏差为3。下面就是替换后的网络。注意，这里我将右下方的“与非”门替换为对应的感知器，使得这个图上的箭头容易画        
 
 <center>      
 
