--- a/_posts/计算机/2016-01-12-神经网络识别手写体数字.md
+++ b/_posts/计算机/2016-01-12-神经网络识别手写体数字.md
@@ -108,8 +108,9 @@ description:
 ![enter description here][9]
 
 
-</center>
+</center>      
 
+需要注意的一点是这个感知器网络最左边的感知器的输出对应予最下面的感知器的输入被应用了两次。当我们定义感知器模型的时候并没有清楚的指明一个地方到另一个地方的双路是否可以有两次。实际上这并不重要。如果我们不允许这样的事情（一个地方到另一个有两路输出），这里完全可以把两条权重为-2的线简化为一条权重为-4的线。
 
 
 
